# genai

./: LINKS.txt  pyproject.toml
document-chat/: .gitignore  Makefile  docker-compose.yaml  pyproject.toml
document-chat/migrations/: env.py  script.py.mako
document-chat/migrations/versions/: 3a19f82418f8_messages_table.py  9af1e68c4409_add_model_column_on_message_table.py  c6575afabb3c_initial_chat_table.py  e3f1dcb1f26d_change_message_content_model.py
document-chat/src/: app.py  utils.py
document-chat/src/agents/: chatbot.py  processor.py
document-chat/src/aws/: textract.py
document-chat/src/core/: __init__.py  config.py  db.py
document-chat/src/dependencies/: __init__.py  repositories.py  request.py  session.py
document-chat/src/embeddings/: cohere.py
document-chat/src/models/: __init__.py  chat.py  message.py
document-chat/src/repositories/: __init__.py  chat.py  message.py
document-chat/src/routers/: __init__.py  chat.py
