[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.41.2",
    "chromadb>=1.3.5",
    "langchain>=1.0.8",
    "langgraph>=1.0.3",
    "pdf2image>=1.17.0",
    "pydantic-ai-slim[bedrock]>=1.22.0",
    "pypdf>=6.4.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[bedrock-runtime,textract]>=1.41.2",
]

[tool.uv.workspace]
members = [
    "document-chat",
]
